Fix alignment of icon and text for Recipe in nav bar

--- a/styles/more.css
+++ b/styles/more.css
@@ -182,5 +182,5 @@ div.btn-group-vertical{
 
 .bi.bi-patch-question-fill {
   position: relative;
-  top: 40%;
+  /* top: 10%; */
 }
